# nathantypanski.com

./: .gitignore  404.html  CNAME  LICENSE  README.md  about.markdown  atom.xml  blog.html  contact.html  deploy-gh-pages  deploy.sh  dp  dp.sh  index.html  kim-typanski-obituary.html  machine-learning.html  ndt.cabal  new-post.sh  notes.html  notetaking.html  pages.html  pgp.html  post-receive  projects.html  robots.txt  shell.nix  site  site.hs  software-choice.html  stack.yaml  tagcount.sh  tex.html  text-processing.html  vincemod.html  watch.sh  website.html  worklog.html
_site/: about.html  archive.html  contact.html  index.html
blog/: 2012-06-03-powerusers.html  2012-06-03-powerusers.markdown  2012-11-14-custom-linux-kernel.html  2012-11-14-custom-linux-kernel.markdown  2013-05-02-whats-in-a-logic-diagram.html  2013-05-02-whats-in-a-logic-diagram.md  2013-07-11-ad-blocking-done-right.html  2013-07-11-ad-blocking-done-right.markdown  2013-07-21-ubuntu-security.markdown  2013-08-12-ranger.html  2013-08-12-ranger.markdown  2014-01-19-debian.html  2014-01-19-debian.md  2014-06-22-keep-writing.html  2014-06-22-keep-writing.md  2014-07-02-switching-to-emacs.html  2014-07-02-switching-to-emacs.md  2014-07-09-personal-wiki.html  2014-07-09-personal-wiki.md  2014-07-14-no-space-left.html  2014-07-14-no-space-left.md  2014-07-25-all-your-daemons.html  2014-07-25-all-your-daemons.md  2014-08-03-a-vim-like-emacs-config.html  2014-08-03-a-vim-like-emacs-config.md  2014-08-22-openssl-makefiles.html  2014-08-22-openssl-makefiles.md  2014-08-23-ode-solver-py.html  2014-08-23-ode-solver-py.md  2014-10-29-tikz-timing.html  2014-10-29-tikz-timing.md  2014-12-08-demo-a-vim-like-emacs.html  2014-12-08-demo-a-vim-like-emacs.md  2014-12-13-git-rebase-away-files.html  2014-12-13-git-rebase-away-files.md  2015-01-17-great-implementation.html  2015-01-17-great-implementation.md  2015-04-15-heads-down-for-the-finish-line.html  2015-04-15-heads-down-for-the-finish-line.md  2015-05-17-ruby.html  (+14 more)
css/: default.css  default.css.css  fonts.css
(+141 files in other folders)
