name: ndt
version: 1.0
synopsis: My personal website
-- description:
homepage: http://nathantypanski.com
license-file: LICENSE
author: Nathan D. Typanski
maintainer: mail@nathantypanski.com
-- copyright:
category: Web
build-type: Simple
cabal-version: >=1.8

executable site
  main-is: site.hs
  hs-source-dirs: src/
  ghc-options: -O2 -Wall -threaded
  -- other-modules:
  build-depends: base,
                       hakyll >= 4.5.1.0,
                       pandoc >= 1.12.3.3,
                       containers >= 0.5.5.1,
                       directory >= 1.2.1,
                       text >= 1.2.4.1,
                       process >= 1.6.11.0
